* 2013-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 28673: Removed the warning on password change that rather acts as information message

* 2013-09-03 - dennis.sieben@open-xchange.com

 - Fix for bug 28658: Removed special handling

* 2013-09-03 - thorben.betten@open-xchange.com

 - Fix for bug 28635: Sanitize HTML content from calendar printing

* 2013-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 28642: Apply sanitizing to text/xml MIME types, too

* 2013-08-30 - thorben.betten@open-xchange.com

 - Fix for bug 28602: Don't close ThresholdFileHolder instance
 - Fix for bug 27866: Handle possible null return value from iCal parse attempt

* 2013-08-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Restrict socket binding to local loopback address only by default, disable Hazelcast's REST and Memcache client 
                      request listener services by default 
 - Fix for bug 28317: Invalidate all other user sessions after password change

* 2013-08-07 - martin.herfurth@open-xchange.com

 - Fix for bug 26475: Bad calculation of recurrence date position of a change exception on delete.
 - Fix for bug 27238: Handle empty organizer field on delete.

* 2013-08-07 - thorben.betten@open-xchange.com

 - Fix for bug 27911: Fixed possible ArrayIndexOutOfBoundsException when transferring bytes from ByteChunk to a byte array
 - Fix for bug 28099: Check for missing members in SOAP request
 - Fix for bug 27745: Restore old lenient behavior of Apache CXG on SOAP request handling

* 2013-08-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 28021: Try and detect charset when delivering text/plain files
 - Fix for bug 28071: Optionally ignore UID during iCal import

* 2013-08-06 - thorben.betten@open-xchange.com

 - Fix for bug 27849: Add an option to specify characters that are not allowed to be contained in a mailbox name
 - Fix for bug 28070: Retry with "MS932" charset if "Shift-JIS" charset yields \ufffd